--- a/01_PspFlujos/app/src/main/res/layout/activity_main.xml
+++ b/01_PspFlujos/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.mrdiaz.a01_pspflujos.MainActivity">
 
     <TextView
+        android:id="@+id/texto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
