--- a/RamalloDiazManuel_MiniNotas/app/src/main/res/layout/activity_main.xml
+++ b/RamalloDiazManuel_MiniNotas/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         app:layout_constraintHorizontal_bias="0.892"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textoMultilinea"
-        app:layout_constraintVertical_bias="0.886" />
+        app:layout_constraintVertical_bias="0.886"
+        android:layout_width="wrap_content" />
 
 </android.support.constraint.ConstraintLayout>
