continuacion con el autocomplete, creado autocompleteAdapter y demás

--- a/ApiGooglePlacesProject/app/src/main/res/layout/activity_main.xml
+++ b/ApiGooglePlacesProject/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     tools:context="com.mrdiaz.apigoogleplacesproject.MainActivity">
 
 
-    <AutoCompleteTextView
+
+    <com.mrdiaz.apigoogleplacesproject.DelayAutoCompleteTextView
         android:id="@+id/autoCompleteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
